force-app/main/default/objects/AE_Bonus__c/AE_Bonus__c.object-meta.xml
<CustomObject>
    <description>Object to capture AE Bonus and quota values</description>
    <label>AE Bonus</label>
    <nameField>
        <label>Bonus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE Bonus</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>