force-app/main/default/objects/AE_Bonus__c/fields/AE_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to link the AE user with their quarterly bonus records</description>
    <label>AE Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission</relationshipName>
    <type>Lookup</type>
</CustomField>