force-app/main/default/objects/AE_Bonus__c/fields/AE_Office_Logic__c.field-meta.xml
<CustomField>
    <fullName>AE_Office_Logic__c</fullName>
    <description>AE office logic for List View</description>
    <formula>if(text(Owner:User.Office__c) = text($User.Office__c ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Office Logic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>