force-app/main/default/objects/AE_Bonus__c/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <description>Annual Quota to be populated by the Branch Manager through a VF page, which will then populate this value onto all 4 quarterly Bonus records</description>
    <label>Annual Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>