force-app/main/default/objects/AE_Bonus__c/fields/Billed_Rev_Over_Quota_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Billed_Rev_Over_Quota_This_Quarter__c</fullName>
    <description>Calculation of revenue achieved over quota this quarter</description>
    <formula>IF(Quarterly_Quota__c&gt;Total_Billed_Revenue_this_Quarter__c,0,
Total_Billed_Revenue_this_Quarter__c-Quarterly_Quota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Rev Over Quota $ This Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>