force-app/main/default/objects/AE_Bonus__c/fields/Billed_Revenue_over_Quota_Points__c.field-meta.xml
<CustomField>
    <fullName>Billed_Revenue_over_Quota_Points__c</fullName>
    <description>Billed Revenue over Quota percentage translated into Base Bonus point system</description>
    <formula>IF( Rev_Quota__c &gt;=1.25,40,
IF(AND(Rev_Quota__c&gt;=1.2,Rev_Quota__c&lt;1.25),30,
IF(AND(Rev_Quota__c&gt;=1.15,Rev_Quota__c&lt;1.2),20,
IF(AND(Rev_Quota__c&gt;=1.1,Rev_Quota__c&lt;1.15),10,
IF(AND(Rev_Quota__c&gt;=1.05,Rev_Quota__c&lt;1.1),5,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Revenue over Quota Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>