force-app/main/default/objects/AE_Bonus__c/fields/Bonus_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Time_Period__c</fullName>
    <description>Quarter and Year that the Bonus Time Period is calculated against</description>
    <formula>TEXT(Quarter_Billed__c) &amp; &quot; &quot; &amp;  Year_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus Time Period</label>
    <type>Text</type>
</CustomField>