force-app/main/default/objects/AE_Bonus__c/fields/Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter__c</fullName>
    <description>This is used for quarterly reporting purpose.</description>
    <formula>IF(

Year_Billed__c =  TEXT(YEAR(today())),

CASE(Quarter_Billed__c,
&apos;Q1&apos;, Date(year(today()),3,31), 
&apos;Q2&apos;, Date(year(today()),6,30),
&apos;Q3&apos;,Date(year(today()),9,30),
Date(year(today()),12,31)),

Date(0000, 0, 0))</formula>
    <label>Current Quarter</label>
    <type>Date</type>
</CustomField>