force-app/main/default/objects/AE_Bonus__c/fields/ERA_s_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>ERA_s_this_Quarter__c</fullName>
    <description>Count of number of ERA&apos;s created against an Account this quarter, to be used in Bonus calculations.  Populated via code.</description>
    <label># ERA&apos;s this Quarter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>