force-app/main/default/objects/AE_Bonus__c/fields/ERA_s_this_Quarter_Points__c.field-meta.xml
<CustomField>
    <fullName>ERA_s_this_Quarter_Points__c</fullName>
    <description>Number of ERAs this Quarter translated into Base Bonus Calculation point system</description>
    <formula>IF(ERA_s_this_Quarter__c&gt;=2,8,
IF(ERA_s_this_Quarter__c=1,4,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERA’s this Quarter Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>