force-app/main/default/objects/AE_Bonus__c/fields/Existing_Business_Leads_Per_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business_Leads_Per_Quarter__c</fullName>
    <description>Number of Existing Business Leads per Quarter</description>
    <formula>Total_Leads_Per_Quarter__c - New_Business_Leads_this_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Business Leads Per Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>