force-app/main/default/objects/AE_Bonus__c/fields/Extra_Cred_Bonus_Billed_Rev_Quota2__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cred_Bonus_Billed_Rev_Quota2__c</fullName>
    <description>Extra credit revenue over quota bonus amount for AE</description>
    <formula>Extra_Cred_Bonus_Billed_Rev_Quota__c *  Billed_Rev_Over_Quota_This_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Cred Bonus Billed Rev/Quota $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>