force-app/main/default/objects/AE_Bonus__c/fields/Extra_Cred_Bonus_Billed_Rev_Quota3__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cred_Bonus_Billed_Rev_Quota3__c</fullName>
    <label>Extra Cred Bonus Billed Rev/Quota $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>