force-app/main/default/objects/AE_Bonus__c/fields/Extra_Cred_Bonus_Billed_Rev_Quota__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cred_Bonus_Billed_Rev_Quota__c</fullName>
    <description>% Bonus of Revenue over Quota, based on AE Type on User record-- Local, Regional, National.</description>
    <formula>IF(ISPICKVAL(Owner:User.AE_Type__c,&quot;Local&quot;),0.01,
IF(ISPICKVAL(Owner:User.AE_Type__c,&quot;Regional&quot;),0.015,
IF(ISPICKVAL(Owner:User.AE_Type__c,&quot;National&quot;),0.02,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Cred Bonus Billed Rev/Quota %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>