force-app/main/default/objects/AE_Bonus__c/fields/Extra_Cred_Commission_Billed_Rev_Quota4__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cred_Commission_Billed_Rev_Quota4__c</fullName>
    <formula>IF((Extra_Cred_Bonus_Billed_Rev_Quota__c * Billed_Rev_Over_Quota_This_Quarter__c)&gt; (Total_Bonus_earned_this_Quarter__c- Total_Base_Bonus__c), (Total_Bonus_earned_this_Quarter__c- Total_Base_Bonus__c), 
Extra_Cred_Bonus_Billed_Rev_Quota__c * Billed_Rev_Over_Quota_This_Quarter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Cred Commission Billed Rev/Quota $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>