force-app/main/default/objects/AE_Bonus__c/fields/Leads_Outside_my_Territory__c.field-meta.xml
<CustomField>
    <fullName>Leads_Outside_my_Territory__c</fullName>
    <description>Count of number of leads (Jobs) outside my territory, to be used in Bonus calculations.  This count is determined by Jobs that the AE is an Opportunity Team/Split member who&apos;s office is outside of the state that their office is in.  Populate via code from Job record.</description>
    <label># Leads Outside my Territory</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>