force-app/main/default/objects/AE_Bonus__c/fields/Leads_Outside_my_Territory_Points__c.field-meta.xml
<CustomField>
    <fullName>Leads_Outside_my_Territory_Points__c</fullName>
    <description>Count of Opportunities outside the AE&apos;s territory (meaning outside their state), translated into Base Bonus point system</description>
    <formula>IF(Leads_Outside_my_Territory__c&gt;=2,4,
IF(Leads_Outside_my_Territory__c=1,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Outside my Territory Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>