force-app/main/default/objects/AE_Bonus__c/fields/Lunch_and_Learns__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learns__c</fullName>
    <description>Count of number of task records with the Type of &apos;Lunch and Learn&apos; created against a contact each quarter, to be used in bonus calculation.  Populated via code.</description>
    <label># Lunch and Learns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>