force-app/main/default/objects/AE_Bonus__c/fields/Lunch_and_Learns_this_Quarter_Points__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learns_this_Quarter_Points__c</fullName>
    <description>Count of Lunch and Learn activity records translated into Base Bonus point system</description>
    <formula>IF(Lunch_and_Learns__c&gt;=2,8,
IF(Lunch_and_Learns__c=1,4,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch and Learns this Quarter Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>