force-app/main/default/objects/AE_Bonus__c/fields/Manager_Logic__c.field-meta.xml
<CustomField>
    <fullName>Manager_Logic__c</fullName>
    <description>If the current user is equal to owner of the record&apos;s manager, return 1.</description>
    <formula>IF($User.Id  =  Owner:User.ManagerId, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Logic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>