force-app/main/default/objects/AE_Bonus__c/fields/New_Business_Billed_Revenue_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Billed_Revenue_this_Quarter__c</fullName>
    <description>Field to capture the total revenue $ of invoices that are created this quarter related to a Job which AEs are Job Team/Opportunity Split members on and has a Job Type of &apos;New Business.&apos; Populated via code</description>
    <inlineHelpText>Calculating Billing Forecast for New Business</inlineHelpText>
    <label>New Business Billed Revenue this Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>