force-app/main/default/objects/AE_Bonus__c/fields/New_Business_Leads_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Leads_this_Quarter__c</fullName>
    <description>Field to calculate the number of new leads (Jobs) that have a Type of New Business, which is determined by Jobs created on Accounts that have not had a Job created against it in 18 months.  After the first Job is created against it, it is then considered New Business for 18 months.  This field is populated via code from Job records.</description>
    <label>New Business Leads this Quarter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>