force-app/main/default/objects/AE_Bonus__c/fields/New_Business_Revenue_Percentage__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Revenue_Percentage__c</fullName>
    <description>Percentage revenue that is new business</description>
    <formula>IF (New_Business_Billed_Revenue_this_Quarter__c= 0, 0, New_Business_Billed_Revenue_this_Quarter__c /  Quarterly_Quota__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Business/Quota</inlineHelpText>
    <label>New Business Revenue Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>