force-app/main/default/objects/AE_Bonus__c/fields/New_Business_Revenue_this_Quarter_Points__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Revenue_this_Quarter_Points__c</fullName>
    <description>% of new business opportunities translated into Base Bonus point system</description>
    <formula>IF(New_Business_Revenue_Percentage__c&gt;=0.2,30,
IF(AND(New_Business_Revenue_Percentage__c&gt;=0.15,New_Business_Revenue_Percentage__c&lt;0.2),24,
IF(AND(New_Business_Revenue_Percentage__c&gt;=0.1,New_Business_Revenue_Percentage__c&lt;0.15),16,
IF(AND(New_Business_Revenue_Percentage__c&gt;=0.05,New_Business_Revenue_Percentage__c&lt;0.1),8,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% New Business Rev this Quarter Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>