force-app/main/default/objects/AE_Bonus__c/fields/Quarter_Billed__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Billed__c</fullName>
    <description>Quarter in which the bonus record is applied.</description>
    <label>Quarter Billed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>