force-app/main/default/objects/AE_Bonus__c/fields/Quarterly_Quota__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Quota__c</fullName>
    <description>Formula field to divide the annual quota by 4</description>
    <formula>Annual_Quota__c / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>