force-app/main/default/objects/AE_Bonus__c/fields/Rev_Quota__c.field-meta.xml
<CustomField>
    <fullName>Rev_Quota__c</fullName>
    <description>Percentage of billed revenue generated over quota used in Base Bonus calculation</description>
    <formula>Total_Billed_Revenue_this_Quarter__c /Quarterly_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev/Quota %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>