force-app/main/default/objects/AE_Bonus__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The Role Name of this AE</description>
    <formula>AE_Name__r.UserRole.Name</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>