force-app/main/default/objects/AE_Bonus__c/fields/Team_Region__c.field-meta.xml
<CustomField>
    <fullName>Team_Region__c</fullName>
    <formula>AE_Name__r.UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Region</label>
    <type>Text</type>
</CustomField>