force-app/main/default/objects/AE_Bonus__c/fields/Total_Base_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Bonus__c</fullName>
    <description>This will show the total amount of commission amount calculated by field update.</description>
    <inlineHelpText>Commission earned</inlineHelpText>
    <label>Total Base Bonus $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>