force-app/main/default/objects/AE_Bonus__c/fields/Total_Base_Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Bonus_Points__c</fullName>
    <description>Field calculated by adding points New Business, Leads, ERAs, Leads outside territory, Lunch and Learns, and Rev/Quota points in order to calculate the Base Bonus revenue</description>
    <formula>New_Business_Revenue_this_Quarter_Points__c + Total_Leads_this_Quarter_Points__c  + Lunch_and_Learns_this_Quarter_Points__c + Leads_Outside_my_Territory_Points__c + ERA_s_this_Quarter_Points__c + Billed_Revenue_over_Quota_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Base Bonus Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>