force-app/main/default/objects/AE_Bonus__c/fields/Total_Billed_Revenue_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Revenue_this_Quarter__c</fullName>
    <description>Field to capture the total revenue $ of invoices that are created this quarter related to a Job which AEs are Job Team/Opportunity Split members on.  Populated via code. Is calculating the 50% as well.</description>
    <inlineHelpText>Calculating Total Billing Forecast</inlineHelpText>
    <label>Total Billed Revenue this Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>