force-app/main/default/objects/AE_Bonus__c/fields/Total_Billed_Revenue_this_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Revenue_this_Year__c</fullName>
    <description>Field to capture the total revenue $ of invoices that are created this year related to a Job which AEs are Job Team/Opportunity Split members on.  Populated via code</description>
    <label>Total Billed Revenue this Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>