force-app/main/default/objects/AE_Bonus__c/fields/Total_Bonus_earned_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Total_Bonus_earned_this_Quarter__c</fullName>
    <description>Total Base Bonus+ Extra Credit Bonus</description>
    <formula>IF(AND(ISPICKVAL(AE_Name__r.AE_Type__c,&quot;Local&quot;),Total_Base_Bonus__c + 0.01 * Billed_Rev_Over_Quota_This_Quarter__c &gt;5000),5000,
IF(AND(ISPICKVAL(AE_Name__r.AE_Type__c,&quot;Regional&quot;),Total_Base_Bonus__c + 0.015 * Billed_Rev_Over_Quota_This_Quarter__c&gt;10000),10000,
IF(AND(ISPICKVAL(AE_Name__r.AE_Type__c,&quot;National&quot;),Total_Base_Bonus__c + 0.02 * Billed_Rev_Over_Quota_This_Quarter__c&gt;25000),25000,
Total_Base_Bonus__c + (Extra_Cred_Bonus_Billed_Rev_Quota__c * Billed_Rev_Over_Quota_This_Quarter__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bonus earned this Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>