force-app/main/default/objects/AE_Bonus__c/fields/Total_Leads_Per_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads_Per_Quarter__c</fullName>
    <description>Count of number total jobs created against an Account in a given Quarter that has the AE as a Job Team/Opportunity Split member.  Populated via code.</description>
    <label>Total Leads Per Quarter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>