force-app/main/default/objects/AE_Bonus__c/fields/Total_Leads_this_Quarter_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads_this_Quarter_Points__c</fullName>
    <description>Total leads created this quarter translated into Base Bonus point system.</description>
    <formula>IF(Total_Leads_Per_Quarter__c&gt;=80,10, 
IF(AND(Total_Leads_Per_Quarter__c&gt;=70,Total_Leads_Per_Quarter__c&lt;=79),8, 
IF(AND(Total_Leads_Per_Quarter__c&gt;=60,Total_Leads_Per_Quarter__c&lt;=69),6, 
IF(AND(Total_Leads_Per_Quarter__c&gt;=50,Total_Leads_Per_Quarter__c&lt;=59),4, 
IF(AND(Total_Leads_Per_Quarter__c&gt;=40,Total_Leads_Per_Quarter__c&lt;=49),2,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Leads this Quarter Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>