force-app/main/default/objects/AE_Bonus__c/fields/Year_Billed__c.field-meta.xml
<CustomField>
    <fullName>Year_Billed__c</fullName>
    <description>Year in which a bonus record is applied.</description>
    <label>Year Billed</label>
    <length>4</length>
    <type>Text</type>
</CustomField>