force-app/main/default/objects/AE_Bonus__c/validationRules/Annual_Quota_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Quota_Change</fullName>
    <active>true</active>
    <description>Business Directors are not allowed to change their own quota.</description>
    <errorConditionFormula>AND( 
NOT(ISNEW()), 
$User.Id = OwnerId, 
ISCHANGED( Annual_Quota__c ) 
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify your own quota. Please contact your manager for any changes.</errorMessage>
</ValidationRule>