force-app/main/default/objects/AE_Bonus__c/listViews/My_Bonus_Records.listView-meta.xml
<ListView>
    <fullName>My_Bonus_Records</fullName>
    <columns>NAME</columns>
    <columns>AE_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Year_Billed__c</columns>
    <columns>Quarter_Billed__c</columns>
    <columns>Billed_Rev_Over_Quota_This_Quarter__c</columns>
    <columns>New_Business_Leads_this_Quarter__c</columns>
    <columns>ERA_s_this_Quarter__c</columns>
    <columns>Lunch_and_Learns__c</columns>
    <columns>New_Business_Revenue_this_Quarter_Points__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Bonus Records</label>
</ListView>