force-app/main/default/objects/AE_Bonus__c/listViews/X2018_Bonus_Records.listView-meta.xml
<ListView>
    <fullName>X2018_Bonus_Records</fullName>
    <columns>NAME</columns>
    <columns>AE_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2018</value>
    </filters>
    <label>2018 Bonus Records</label>
</ListView>